--- a/package.json
+++ b/package.json
@@ -12,28 +12,32 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.25",
-    "expo-constants": "~18.0.10",
-    "expo-font": "~14.0.9",
-    "expo-linking": "~8.0.9",
-    "expo-router": "~6.0.15",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo": "^54.0.27",
+    "expo-audio": "~1.0.16",
+    "expo-av": "~16.0.8",
+    "expo-constants": "~18.0.11",
+    "expo-font": "~14.0.10",
+    "expo-linking": "~8.0.10",
+    "expo-router": "~6.0.10",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "^0.81.5",
+    "react-native-big-calendar": "^4.19.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "expo-av": "~16.0.7"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
