--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
-    "expo": "^54.0.27",
-    "expo-audio": "~1.0.16",
+    "expo": "~54.0.29",
+    "expo-asset": "~12.0.11",
+    "expo-audio": "~1.1.0",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.11",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.10",
     "expo-navigation-bar": "~5.0.10",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
@@ -37,7 +39,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
+    "prettier": "^3.7.4",
     "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
