--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
+    "colord": "^2.9.3",
     "expo": "~54.0.29",
     "expo-asset": "~12.0.11",
     "expo-audio": "~1.1.0",
@@ -38,7 +41,10 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
     "@types/react": "~19.1.0",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
     "prettier": "^3.7.4",
     "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "19.1.0",
